# test-vscode-ext-serve-run-wasm-client

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cli/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
src/: lib.rs  main.rs  ndjson.rs
test/: pipe.mjs  srv.mjs  test_cli.sh
