[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", default-features = false, features = ["stream", "blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"
